--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h1>WhatsApp Link Generator</h1>
     <p>Enter a phone number (starting with 0) and click the button to generate a WhatsApp link:</p>
     <input type="text" id="phoneNumber" placeholder="e.g., 0544444444">
-    <button onclick="generateWhatsAppLink()">Generate Link</button>
+    <button onclick="generateWhatsAppLink()">XGenerate Link</button>
     <p id="result"></p>
 
     <script>
