--- a/index.html
+++ b/index.html
@@ -1,81 +1,1 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title>WhatsApp Link Generator</title>
-    <style>
-        body {
-            background-color: #111;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        h1 {
-            font-size: 24px;
-        }
-
-        p {
-            font-size: 18px;
-        }
-
-        input[type="text"] {
-            padding: 10px;
-            border: none;
-            background-color: #222;
-            color: #fff;
-            font-size: 16px;
-            border-radius: 5px;
-            width: 200px;
-            margin: 10px;
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: #0077FF;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            border-radius: 5px;
-        }
-
-            button:hover {
-                background-color: #0055CC;
-            }
-
-        a {
-            text-decoration: none;
-            color: #00FF77;
-        }
-    </style>
-</head>
-<body>
-    <h1>WhatsApp Link Generator</h1>
-    <p>Enter a phone number (starting with 0) and click the button to generate a WhatsApp link:</p>
-    <input type="text" id="phoneNumber" placeholder="e.g., 0544444444">
-    <button onclick="generateWhatsAppLink()">XGenerate Link</button>
-    <p id="result"></p>
-
-    <script>
-        function generateWhatsAppLink() {
-            const phoneNumberInput = document.getElementById('phoneNumber');
-            const phoneNumber = phoneNumberInput.value;
-
-            // Remove the leading 0 and create the WhatsApp link
-            const sanitizedNumber = phoneNumber.replace(/^0+/, ''); // Remove leading 0s
-            const whatsappLink = `http://wa.me/972${sanitizedNumber}`;
-
-            // Display the generated link
-            const resultElement = document.getElementById('result');
-            resultElement.innerHTML = `<a href="${whatsappLink}" target="_blank">${whatsappLink}</a>`;
-        }
-    </script>
-</body>
-</html>
+﻿<a href="/p/what.html">WHA :D</a>
