--- a/index.html
+++ b/index.html
@@ -1,1 +1,177 @@
-﻿<a href="/p/wha.html">WHAA :D</a>
+﻿<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <style>
+        html,
+        body {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            background-color: black;
+            /* background-position: ; */
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        #background {
+            background-image: url("img/backgrounds/1.jpg");
+            background-size: cover;
+            opacity: 0.3;
+            /* background:rgb(33, 11, 11); */
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background-position: center;
+            transition: background 3s;
+            /* Add a background transition */
+
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .content {
+            /* background: green; */
+            margin: 6px;
+            padding: 16px;
+            width: 400px;
+            background: rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+
+
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+            transition: color 0.2s;
+            display: block;
+            /* Add a color transition */
+
+        }
+
+        a:hover {
+            cursor: pointer;
+            /* text-decoration: underline; */
+            color: rgb(82, 82, 226);
+        }
+
+        h2 {
+            margin-bottom: 4px;
+        }
+    </style>
+    <style>
+        .led-sign {
+            font-family: 'Courier New', Courier, monospace;
+            white-space: nowrap;
+            color: rgb(0, 13, 255);
+            font-size: 24px;
+            animation: moveLeft 10s linear infinite;
+        }
+
+        @keyframes moveLeft {
+            0% {
+                transform: translateX(110%);
+            }
+
+            100% {
+                transform: translateX(-360%);
+            }
+        }
+        
+    </style>
+
+    <style>
+        
+    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <div id="background"></div>
+
+    <div class="container">
+        <div class="content">
+            <h1>/arik63.gitgub.io</h1>
+            <h2>/projects:</h2>
+            <a href="p/led.html">led</a>
+
+            <a href="p/whatsappgen.html">WhatsApp send message link</a>
+            <a href="p/favorites.html">Favorites tool</a>
+            <a href="p/favorites.html">Chat</a>
+            <a href="p/favorites.html">Social</a>
+            <a href="p/favorites.html">arduino synth</a>
+            <a href="p/drums.html">808 drums</a>
+            <a href="p/favorites.html">woodworking</a>
+            <a href="p/synth.html">synth</a>
+
+
+
+
+
+            <h2>/srcs:</h2>
+            <a href="">youtube</a>
+            <a href="">linkdein</a>
+            <a href="">spotify</a>
+            <a href="p/favorites.html">Favorites tool</a>
+            <a href="">beha</a>
+
+
+
+            <div class="led-sign">
+                WELCOME TO MY PROFILE • A VERSION 2 OF THE WHATSAPP LINK GEN IS UNDERCONSTRUCTION,
+                pateint, will be worth it :)XXXXXXXXXXXXXXXXXXXXX
+            </div>
+
+
+
+
+        </div>
+        <div id="dna">
+            <div></div><div></div><div></div><div></div><div></div>
+              <div></div><div></div><div></div><div></div><div></div>
+              <div></div><div></div><div></div><div></div><div></div>
+              <div></div><div></div><div></div><div></div><div></div>
+              <div></div><div></div><div></div><div></div><div></div>
+              <div></div><div></div><div></div><div></div><div></div>
+          </div>
+    </div>
+
+</body>
+
+
+<script>
+    const images = [
+        "img/backgrounds/1.jpg",
+        "img/backgrounds/2.jpg",
+        "img/backgrounds/3.jpg"
+    ]
+    const background = document.getElementById('background');
+    let currentImage = 0;
+
+
+    function changeBackground() {
+        currentImage = (currentImage + 1) % images.length;
+        const imageUrl = images[currentImage];
+        background.style.background = `url(${imageUrl}) center/cover no-repeat`;
+    }
+
+    setInterval(() => {
+        changeBackground();
+    }, 4000);
+
+
+</script>
+
+</html>
