--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             margin: 6px;
             padding: 16px;
             width: 400px;
-            background: rgba(0, 0, 0, 0.2);
+            /* background: rgba(0, 0, 0, 0.2); */
             overflow: hidden;
 
 
@@ -71,11 +71,12 @@
     </style>
     <style>
         .led-sign {
+            margin-top:20px;
             font-family: 'Courier New', Courier, monospace;
             white-space: nowrap;
             color: rgb(0, 13, 255);
             font-size: 24px;
-            animation: moveLeft 10s linear infinite;
+            animation: moveLeft 16s linear infinite;
         }
 
         @keyframes moveLeft {
@@ -84,7 +85,7 @@
             }
 
             100% {
-                transform: translateX(-360%);
+                transform: translateX(-690%);
             }
         }
         
@@ -105,8 +106,6 @@
         <div class="content">
             <h1>/arik63.gitgub.io</h1>
             <h2>/projects:</h2>
-            <a href="p/led.html">led</a>
-
             <a href="p/whatsappgen.html">WhatsApp send message link</a>
             <a href="p/favorites.html">Favorites tool</a>
             <a href="p/favorites.html">Chat</a>
@@ -127,25 +126,16 @@
             <a href="p/favorites.html">Favorites tool</a>
             <a href="">beha</a>
 
-
-
             <div class="led-sign">
                 WELCOME TO MY PROFILE • A VERSION 2 OF THE WHATSAPP LINK GEN IS UNDERCONSTRUCTION,
-                pateint, will be worth it :)XXXXXXXXXXXXXXXXXXXXX
+                pateint, will be worth it :)
             </div>
 
 
 
 
         </div>
-        <div id="dna">
-            <div></div><div></div><div></div><div></div><div></div>
-              <div></div><div></div><div></div><div></div><div></div>
-              <div></div><div></div><div></div><div></div><div></div>
-              <div></div><div></div><div></div><div></div><div></div>
-              <div></div><div></div><div></div><div></div><div></div>
-              <div></div><div></div><div></div><div></div><div></div>
-          </div>
+
     </div>
 
 </body>
