--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <div class="container">
         <div class="content">
-            <h1>/arik63.gitgub.io</h1>
+            <h1>//arik63.gitgub.io</h1>
             <h2>/projects:</h2>
             <a href="p/whatsappgen.html">WhatsApp send message link</a>
             <a href="p/favorites.html">Favorites tool</a>
