--- a/p/favorites.html
+++ b/p/favorites.html
@@ -1,31 +1,117 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-    <title>Favorite Websites</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+
+    <!-- -----------------------------------------------------------  -->
+
+    <div id="background"></div>
+
+    <div class="container">
+        <div class="content">
+
+            <h1>Favorites page</h1>
+            <div class="content">
+                <p>Enter a phone number (starting with 0) and click the button or press Enter to generate a WhatsApp
+                    link:</p>
+                <form onsubmit="addToFavorite(); return false;">
+                    <input type="text" id="url" placeholder="address">
+                    <input type="text" id="name" placeholder="name">
+                    <button type="submit">Generate Link</button>
+                </form>
+                <p id="result"></p>
+            </div>
+            <a class="mygit" href="https://arik63.github.io">>> https://arik63.github.io</a>
+            <script>
+                const addToFavorite = () => {
+                    let url = document.querySelector("#url").value;
+
+                    if (!url.startsWith("http://") && !url.startsWith("https://")) {
+                        // If it doesn't start with either, add "https"
+                        url = "https://" + url;
+                    }
+
+
+                    let name = document.querySelector("#name").value;
+
+                    const div = document.getElementById("favorites"); // Get the div by its ID
+                    const newElement = document.createElement("p"); // Create a new element (e.g., a paragraph)
+                    newElement.innerHTML = `
+                        <a href="${url}">${name}</a>
+                        <button>Visit</button>
+                        <button>Edit</button>
+                        <button>Remove</button>
+                    `
+                        ; // Set the content of the new element
+                    newElement.classList.add("web"); // Add a class to the new element
+
+                    div.appendChild(newElement); // Append the new element to the div
+
+
+                }
+            </script>
+
+
+            <div id="favorites">
+                <div class="web">
+                    <a href="www.yad2.co.il">Yad2</a>
+                    <button>Visit</button>
+                    <button>Edit</button>
+                    <button>Remove</button>
+                </div>
+                <div class="web">
+                    <a href="www.yad2.co.il">Yad2</a>
+                    <button>Visit</button>
+                    <button>Edit</button>
+                    <button>Remove</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+    <!-- -----------------------------------------------------------  -->
     <style>
+        input:focus {
+            outline: none;
+        }
+
+        .web {
+            margin: 10px;
+        }
+
+        .web button {
+            padding: 5px 10px;
+            background-color: rgba(0, 0, 0, 0.0);
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+            border: 1px solid white;
+            /* width: 100%; */
+            transition: background-color 0.1s;
+        }
+
         body {
             background-color: #111;
             color: #fff;
             font-family: Arial, sans-serif;
-            text-align: center;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            /* Center horizontally */
             height: 100vh;
-        }
-
-        h1 {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 18px;
         }
 
         input[type="text"] {
@@ -35,165 +121,78 @@
             color: #fff;
             font-size: 16px;
             border-radius: 5px;
-            width: 300px;
-            margin: 10px;
+            width: 94%;
+            margin-bottom: 10px;
         }
 
-        button {
-            padding: 10px;
-            background-color: #0077FF;
+        form button {
+            padding: 10px 20px;
+            background-color: rgba(0, 0, 0, 0.0);
             color: #fff;
             border: none;
             cursor: pointer;
             font-size: 16px;
             border-radius: 5px;
-            width: 150px; /* Make the button the same width as the inputs */
+            border: 1px solid white;
+            width: 100%;
+            transition: background-color 0.1s;
+            /* Add transition effect */
+
         }
 
-            button:hover {
-                background-color: #0055CC;
-            }
 
-        ul {
-            list-style: none;
-            padding: 0;
+        button:hover {
+            background-color: rgba(255, 255, 255, 0.1)
         }
 
-        li {
-            margin: 10px 0;
+        a {
+            text-decoration: none;
+            color: #00FF77;
+        }
+    </style>
+
+    <style>
+        #background {
+            background-image: url("../img/backgrounds/1.jpg");
+            background-size: cover;
+            opacity: 0.05;
+            /* background:rgb(33, 11, 11); */
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background-position: center;
+            transition: background 3s;
+            /* Add a background transition */
+
+        }
+
+        .container {
             display: flex;
+            justify-content: center;
             align-items: center;
         }
 
-        .favorite-link {
-            background-color: #222;
-            padding: 10px;
-            border-radius: 5px;
-            flex-grow: 1;
+        .content {
+            /* background: green; */
+            /* margin: 6px; */
+            /* padding: 16px; */
+            width: 400px;
+            /* background: rgba(0, 0, 0, 0.2); */
+            overflow: hidden;
+
+
         }
 
-            .favorite-link a {
-                text-decoration: none;
-                color: #00FF77;
-            }
-
-        .remove-button {
-            background-color: #FF0000;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            border-radius: 5px;
-            margin-left: 10px;
+        .mygit {
+            color: grey;
+            font-family: 'Courier New', Courier, monospace;
         }
 
-            .remove-button:hover {
-                background-color: #CC0000;
-            }
-
-        .copy-button {
-            background-color: #00FF00;
-            color: #000;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            border-radius: 5px;
-            margin-left: 10px;
+        .mygit:hover {
+            text-decoration: underline;
         }
-
-            .copy-button:hover {
-                background-color: #00CC00;
-            }
     </style>
-</head>
-<body>
-    <h1>Favorite Websites</h1>
-    <p>Enter the name and link of your favorite website:</p>
-    <input type="text" id="websiteName" placeholder="Website Name">
-    <input type="text" id="websiteLink" placeholder="Website Link">
-    <button onclick="addFavorite()">Add to Favorites</button>
-    <ul id="favoritesList"></ul>
-
-    <script>
-        function addFavorite() {
-            const websiteNameInput = document.getElementById('websiteName');
-            const websiteLinkInput = document.getElementById('websiteLink');
-            const websiteName = websiteNameInput.value;
-            const websiteLink = websiteLinkInput.value;
-
-            if (websiteName && websiteLink) {
-                const favoritesList = document.getElementById('favoritesList');
-                const li = document.createElement('li');
-                li.className = 'favorite-link';
-                li.innerHTML = `
-                        <a href="${websiteLink}" target="_blank">${websiteName}</a>
-                        <button class="remove-button" onclick="removeFavorite(this)">Remove</button>
-                        <button class="copy-button" onclick="copyToClipboard(this)">Copy</button>
-                    `;
-                favoritesList.appendChild(li);
-
-                // Store the favorites in local storage
-                saveFavoritesToLocalStorage();
-
-                // Clear input fields
-                websiteNameInput.value = '';
-                websiteLinkInput.value = '';
-            }
-        }
-
-        function removeFavorite(button) {
-            const li = button.parentElement;
-            const favoritesList = document.getElementById('favoritesList');
-            favoritesList.removeChild(li);
-
-            // Store the updated favorites in local storage
-            saveFavoritesToLocalStorage();
-        }
-
-        function copyToClipboard(button) {
-            const link = button.parentElement.querySelector('a');
-            const textArea = document.createElement('textarea');
-            textArea.value = link.href;
-            document.body.appendChild(textArea);
-            textArea.select();
-            document.execCommand('copy');
-            document.body.removeChild(textArea);
-
-            alert('Link copied to clipboard!');
-        }
-
-        function saveFavoritesToLocalStorage() {
-            const favorites = [];
-            const favoriteLinks = document.querySelectorAll('.favorite-link a');
-            favoriteLinks.forEach(link => {
-                favorites.push({ name: link.textContent, link: link.href });
-            });
-
-            localStorage.setItem('favorites', JSON.stringify(favorites));
-        }
-
-        function loadFavoritesFromLocalStorage() {
-            const favoritesList = document.getElementById('favoritesList');
-            const favoritesData = localStorage.getItem('favorites');
-
-            if (favoritesData) {
-                const favorites = JSON.parse(favoritesData);
-
-                favorites.forEach(favorite => {
-                    const li = document.createElement('li');
-                    li.className = 'favorite-link';
-                    li.innerHTML = `
-                            <a href="${favorite.link}" target="_blank">${favorite.name}</a>
-                            <button class="remove-button" onclick="removeFavorite(this)">Remove</button>
-                            <button class="copy-button" onclick="copyToClipboard(this)">Copy</button>
-                        `;
-                    favoritesList.appendChild(li);
-                });
-            }
-        }
-
-        // Load saved favorites when the page loads
-        loadFavoritesFromLocalStorage();
-    </script>
 </body>
+
 </html>
