--- a/p/whatsappgen.html
+++ b/p/whatsappgen.html
@@ -1,15 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>WhatsApp Link Generator</title>
     <style>
         input:focus {
             outline: none;
         }
-
         body {
             background-color: #111;
             color: #fff;
@@ -19,19 +16,15 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            /* Center horizontally */
             height: 100vh;
         }
-
         h1 {
             font-size: 24px;
             display: inline-block;
         }
-
         p {
             font-size: 18px;
         }
-
         input[type="number"] {
             padding: 10px;
             border: none;
@@ -42,9 +35,9 @@
             width: 94%;
             margin-bottom: 10px;
         }
-
         button {
             padding: 10px 20px;
+            margin-bottom:10px;
             background-color: rgba(0, 0, 0, 0.0);
             color: #fff;
             border: none;
@@ -54,117 +47,91 @@
             border: 1px solid white;
             width: 100%;
             transition: background-color 0.1s;
-            /* Add transition effect */
-
         }
-
         button:hover {
-            background-color: rgba(255, 255, 255, 0.1)
+            background-color: rgba(255, 255, 255, 0.1);
         }
-
         a {
             text-decoration: none;
             color: #00FF77;
         }
-
         .content {
             max-width: 500px;
-            /* Center the content horizontally */
             padding: 20px;
-            /* Add some padding to the content */
         }
-
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
+        input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
         }
     </style>
-
     <style>
         #background {
             background-image: url("../img/backgrounds/1.jpg");
             background-size: cover;
             opacity: 0.05;
-            /* background:rgb(33, 11, 11); */
             position: absolute;
             width: 100%;
             height: 100%;
             z-index: -1;
             background-position: center;
             transition: background 3s;
-            /* Add a background transition */
-
         }
-
         .container {
             display: flex;
             justify-content: center;
             align-items: center;
         }
-
         .content {
-            /* background: green; */
-            /* margin: 6px; */
-            /* padding: 16px; */
             width: 400px;
-            /* background: rgba(0, 0, 0, 0.2); */
             overflow: hidden;
-
-
         }
-
-        .mygit{
-            color:grey;
+        .mygit {
+            color: grey;
             font-family: 'Courier New', Courier, monospace;
-            }
-            .mygit:hover{
-                text-decoration: underline;
-            }
+        }
+        .mygit:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
-
 <body>
     <div id="background"></div>
-
     <div class="container">
         <div class="content">
-
-            <h1>WhatsApp Link Generator</h1><span>/visit arik63.github.com</span>
+            <h1>WhatsApp Link Generator</h1>
             <div class="content">
-                <p>Enter a phone number (starting with 0) and click the button or press Enter to generate a WhatsApp
-                    link:</p>
+                <p>Enter a phone number (starting with 0) and click the button or press Enter to generate a WhatsApp link:</p>
                 <form onsubmit="generateWhatsAppLink(); return false;">
                     <input type="number" id="phoneNumber" placeholder="e.g., 0544444444">
+                    <button id="redirectButton" onclick="redirectToWhatsApp()">Send message</button>
                     <button type="submit">Generate Link</button>
                 </form>
                 <p id="result"></p>
             </div>
             <a class="mygit" href="https://arik63.github.io">>> https://arik63.github.io</a>
-
         </div>
-
     </div>
-
-
-
     <script>
         function generateWhatsAppLink() {
             const phoneNumberInput = document.getElementById('phoneNumber');
             const phoneNumber = phoneNumberInput.value;
-
-            // Remove the leading 0 and create the WhatsApp link
             const sanitizedNumber = phoneNumber.replace(/^0+/, ''); // Remove leading 0s
-
             if (sanitizedNumber.length !== 9) {
                 alert("Please enter a valid 9-digit phone number.");
                 return;
             }
             const whatsappLink = `http://wa.me/972${sanitizedNumber}`;
-
-            // Display the generated link
             const resultElement = document.getElementById('result');
             resultElement.innerHTML = `<a href="${whatsappLink}" target="_blank">${whatsappLink}</a>`;
+        }
+
+        function redirectToWhatsApp() {
+            generateWhatsAppLink()
+            const resultElement = document.getElementById('result');
+            const link = resultElement.querySelector('a');
+            if (link) {
+                window.open(link.getAttribute('href'), '_blank');
+            }
         }
     </script>
     <script>
@@ -175,18 +142,14 @@
         ]
         const background = document.getElementById('background');
         let currentImage = 0;
-
-
         function changeBackground() {
             currentImage = (currentImage + 1) % images.length;
             const imageUrl = images[currentImage];
             background.style.background = `url(${imageUrl}) center/cover no-repeat`;
         }
-
         setInterval(() => {
             changeBackground();
         }, 4000);
     </script>
 </body>
-
 </html>
