--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h2>/projects:</h2>
             <a href="p/whatsappgen.html">WhatsApp send message link</a>
             <a href="p/favorites.html">Favorites tool</a>
-            <a href="p/favorites.html">Chars party</a>
+            <a href="p/biz.html">Chars party</a>
 
             <a href="p/favorites.html">Chat</a>
             <a href="p/favorites.html">Social</a>
