--- a/p/biz.html
+++ b/p/biz.html
@@ -23,7 +23,6 @@
 </head>
 <body>
     <div class="container">
-        ••○◘•○•
     </div>
 </body>
 </html>
@@ -36,7 +35,7 @@ container.innerHTML ="a•••"
 
 
 function generateRandomString(length) {
-  const characters = '↕‼☼♪♀☼↕♫☺☺♂♀♪♫♪♀'; // Define the characters you want to use
+  const characters = '•◘○<>'; // Define the characters you want to use
   let result = '';
 
   for (let i = 0; i < length; i++) {
@@ -49,8 +48,8 @@ function generateRandomString(length) {
 
 
 setInterval(() => {
-    container.innerHTML = generateRandomString(150000);
-}, 100);
+    container.innerHTML = generateRandomString(1500);
+}, 50);
 
 
 
