--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
             <h2>/projects:</h2>
             <a href="p/whatsappgen.html">WhatsApp send message link</a>
             <a href="p/favorites.html">Favorites tool</a>
-            <a href="p/biz.html">Chars party</a>
+            <a href="p/biz.html">chaoz party1</a>
+            <a href="p/biz2.html">chaoz party2</a>
+            <a href="p/biz3.html">chaoz party3</a>
 
             <a href="p/favorites.html">Chat</a>
             <a href="p/favorites.html">Social</a>
