--- a/p/biz3.html
+++ b/p/biz3.html
@@ -16,7 +16,7 @@
             height:100%;
             overflow: hidden;
             display:Flex;
-            flex-direction: row;
+            /* flex-direction: column; */
 
         }
     </style>
@@ -28,9 +28,10 @@
 
 <style>
     .screen{
-        flex:3;
-        height:100%;
+        flex:1;
+        /* height:100%; */
         overflow: hidden;
+        /* max-height: 200px; */
         /* background:red; */
         /* border:1px solid white; */
         overflow-wrap: break-word;  
