--- a/p/tools.html
+++ b/p/tools.html
@@ -19,7 +19,7 @@
         }
 
         #background {
-            background-image: url("img/backgrounds/1.jpg");
+            background-image: url("../img/backgrounds/1.jpg");
             background-size: cover;
             opacity: 0.3;
             /* background:rgb(33, 11, 11); */
@@ -71,7 +71,7 @@
     </style>
     <style>
         .led-sign {
-            margin-top:20px;
+            margin-top: 20px;
             font-family: 'Courier New', Courier, monospace;
             white-space: nowrap;
             color: rgb(0, 13, 255);
@@ -88,11 +88,10 @@
                 transform: translateX(-690%);
             }
         }
-        
     </style>
 
     <style>
-        
+
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -104,39 +103,30 @@
 
     <div class="container">
         <div class="content">
-            <h1>//arik63.gitgub.io</h1>
-            <h2>/pieces:</h2>
-            <a href="p/whatsappgen.html">WhatsApp send message link</a>
-            <a href="p/favorites.html">Favorites tool</a>
-            <a href="p/biz.html">chaoz party1</a>
-            <a href="p/biz2.html">chaoz party2</a>
-            <a href="p/biz3.html">chaoz party3</a>
-
-            <a href="p/favorites.html">Chat</a>
-            <a href="p/favorites.html">Social</a>
-            <a href="p/favorites.html">arduino synth</a>
-            <a href="p/drums.html">808 drums</a>
-            <a href="p/favorites.html">woodworking</a>
-            <a href="p/synth.html">synth</a>
+            <h1>//Tools</h1>
+            <h2>/cmd IT multitool:</h2>
 
 
-
-
-
-            <h2>/srcs:</h2>
+            <!-- <h2>/srcs:</h2>
             <a href="">youtube</a>
             <a href="">linkdein</a>
             <a href="">spotify</a>
             <a href="p/favorites.html">Favorites tool</a>
             <a href="">beha</a>
 
+
+ -->
+
+        <a href="tools.bat" download>
+            <img src="../img/tools.png" alt="" width="350px">
+        </a>
+            <a class="mygit" style="color:grey;" href="https://arik63.github.io">click on image to download</a>
+
+            <a class="mygit" href="https://arik63.github.io">>> https://arik63.github.io</a>
+
             <div class="led-sign">
-                WELCOME TO MY PROFILE • A VERSION 2 OF THE WHATSAPP LINK GEN IS UNDERCONSTRUCTION,
-                pateint, will be worth it :)
+                Tools version 2.0031.13
             </div>
-
-
-
 
         </div>
 
@@ -147,8 +137,8 @@
 
 <script>
     const images = [
-        "img/backgrounds/1.jpg",
-        "img/backgrounds/3.jpg"
+        "../img/backgrounds/1.jpg",
+        "../img/backgrounds/3.jpg"
     ]
     const background = document.getElementById('background');
     let currentImage = 0;
