--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             <h1>//arik63.gitgub.io</h1>
             <h2>/pieces:</h2>
             <a href="p/whatsappgen.html">WhatsApp send message link</a>
+            <a href="p/tools.html">Cmd Tools</a>
             <a href="p/favorites.html">Favorites tool</a>
             <a href="p/biz.html">chaoz party1</a>
             <a href="p/biz2.html">chaoz party2</a>
