--- a/index.html
+++ b/index.html
@@ -109,18 +109,12 @@
             <a href="p/whatsappgen.html">WhatsApp send message link</a>
             <a href="p/tools.html">Cmd Tools</a>
             <a href="p/favorites.html">Favorites tool</a>
-            <a href="p/biz.html">chaoz party1</a>
-            <a href="p/biz2.html">chaoz party2</a>
-            <a href="p/biz3.html">chaoz party3</a>
-
-            <a href="p/favorites.html">Chat</a>
-            <a href="p/favorites.html">Social</a>
-            <a href="p/favorites.html">arduino synth</a>
+            <a href="p/biz.html">chaoz1</a>
+            <a href="p/biz2.html">chaoz2</a>
+            <a href="p/biz3.html">chaoz3</a>
             <a href="p/drums.html">808 drums</a>
             <a href="p/favorites.html">woodworking</a>
             <a href="p/synth.html">synth</a>
-
-
 
 
 
